--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         name="description"
         content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>Youngeek</title>
 </head>
 <body>
 <div id="root"></div>
